Email address has been passed..

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -38,6 +38,7 @@
                 android:textAppearance="@style/CodeFont" />
 
             <TextView
+                android:id="@+id/account"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
