--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Login"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="#F3A536"/>
 
         </LinearLayout>
     </ScrollView>
