--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_today"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_today"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_stats"
         android:icon="@drawable/ic_timeline_black_24dp"
         android:title="@string/title_stats"/>
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/title_settings"/>
 
