--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -94,6 +94,7 @@
                     android:textAppearance="@style/CodeFont"/>
 
                 <TextView
+                    android:id="@+id/choose_your_working_days"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
